[WPE] Errors building with libwebrtc enabled https://bugs.webkit.org/show_bug.cgi?id=294668

Reviewed by Michael Catanzaro.

* Source/WebCore/platform/mediastream/libwebrtc/gstreamer/RealtimeOutgoingAudioSourceLibWebRTC.cpp:
(WebCore::RealtimeOutgoingAudioSourceLibWebRTC::pullAudioData): Fix build after 296071@main.
* Source/WebKit/WebProcess/Network/webrtc/LibWebRTCNetworkManager.h: Fix unused-private-field warning.
* Source/WebCore/platform/mediastream/libwebrtc/LibWebRTCProvider.cpp:
(WebCore::LibWebRTCProvider::videoEncodingCapabilitiesOverride): Fix uninitialized field error.

Canonical link: https://commits.webkit.org/296383@main